--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://superpounch.github.io/"
 languageCode = "zh-Hans"
 title = "无限进步！"
 theme = "ananke"
