--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,4 @@
-superpounch.github.io
 baseURL = "https://superpounch.github.io/"
 languageCode = "zh-Hans"
-title = "无限进步！"
+title = "MyBlog"
 theme = "ananke"
